# nixTemplates

./: README.md  flake.nix  renovate.json
.github/workflows/: build.yaml
go/: .editorconfig  .woodpecker.yml  flake.nix
python/: README.md  flake.nix  pyproject.toml
python/src/replace_Me/: __init__.py
trivial/: .gitignore  flake.nix
